--- a/.github/workflows/update-stats.yml
+++ b/.github/workflows/update-stats.yml
@@ -1,9 +1,9 @@
 name: Generate GitHub Stats
 
 on:
-  # Run daily at midnight UTC
+# Run weekly on Sunday at midnight UTC
   schedule:
-    - cron: "0 0 * * *"
+    - cron: "0 0 * * 0"
 
   # Allow manual trigger
   workflow_dispatch:
