Disable weekly schedule for GitHub Stats workflow
Comment out the scheduled run for the workflow.

--- a/.github/workflows/update-stats.yml
+++ b/.github/workflows/update-stats.yml
@@ -2,12 +2,11 @@ name: Generate GitHub Stats
 
 on:
 # Run weekly on Sunday at midnight UTC
-  schedule:
-    - cron: "0 0 * * 0"
+  #schedule:
+   # - cron: "0 0 * * 0"
 
   # Allow manual trigger
   workflow_dispatch:
-
   # Run when config changes
   push:
     paths:
